--- a/Files/Files/Files.csproj
+++ b/Files/Files/Files.csproj
@@ -5,4 +5,14 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="backers.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="backers.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
